; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_timer.c_vlc_player_RemoveTimerSource.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_timer.c_vlc_player_RemoveTimerSource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32, %struct.vlc_player_timer_source* }
%struct.vlc_player_timer_source = type { i32*, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@VLC_PLAYER_TIMER_TYPE_COUNT = common dso_local global i64 0, align 8
@VLC_TICK_INVALID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlc_player_RemoveTimerSource(%struct.TYPE_7__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.vlc_player_timer_source*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = call i32 @vlc_mutex_lock(i32* %9)
  store i64 0, i64* %5, align 8
  br label %11

11:                                               ; preds = %39, %2
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* @VLC_PLAYER_TIMER_TYPE_COUNT, align 8
  %14 = icmp ult i64 %12, %13
  br i1 %14, label %15, label %42

15:                                               ; preds = %11
  %16 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  %19 = load %struct.vlc_player_timer_source*, %struct.vlc_player_timer_source** %18, align 8
  %20 = load i64, i64* %5, align 8
  %21 = getelementptr inbounds %struct.vlc_player_timer_source, %struct.vlc_player_timer_source* %19, i64 %20
  store %struct.vlc_player_timer_source* %21, %struct.vlc_player_timer_source** %6, align 8
  %22 = load %struct.vlc_player_timer_source*, %struct.vlc_player_timer_source** %6, align 8
  %23 = getelementptr inbounds %struct.vlc_player_timer_source, %struct.vlc_player_timer_source* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i32*, i32** %4, align 8
  %26 = icmp eq i32* %24, %25
  br i1 %26, label %27, label %38

27:                                               ; preds = %15
  %28 = load %struct.vlc_player_timer_source*, %struct.vlc_player_timer_source** %6, align 8
  %29 = getelementptr inbounds %struct.vlc_player_timer_source, %struct.vlc_player_timer_source* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = load i64, i64* @VLC_TICK_INVALID, align 8
  %33 = icmp eq i64 %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @assert(i32 %34)
  %36 = load %struct.vlc_player_timer_source*, %struct.vlc_player_timer_source** %6, align 8
  %37 = getelementptr inbounds %struct.vlc_player_timer_source, %struct.vlc_player_timer_source* %36, i32 0, i32 0
  store i32* null, i32** %37, align 8
  br label %38

38:                                               ; preds = %27, %15
  br label %39

39:                                               ; preds = %38
  %40 = load i64, i64* %5, align 8
  %41 = add i64 %40, 1
  store i64 %41, i64* %5, align 8
  br label %11

42:                                               ; preds = %11
  %43 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %44 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %44, i32 0, i32 0
  %46 = call i32 @vlc_mutex_unlock(i32* %45)
  ret void
}

declare dso_local i32 @vlc_mutex_lock(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @vlc_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
